<resources>
    <string name="app_name">Boa Viagem</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuário ou senha inválidos</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino</string>
    <string name="tipo_da_viagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="data_da_chegada">Data da Chegada</string>
    <string name="data_da_saida">Data da Saída</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei!</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao_exclusao_viagem">Deseja excluir a viagem?</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_viagem_sumario">Modo viagem sumário</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="informe_valor_limite">Informe o valor limite</string>
    <string name="valor_limite_sumario">Valor limite sumário</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="manter_conectado">Mantenha-me conectado</string>
    <string name="registro_salvo">Registro salvo com sucesso</string>
    <string name="erro_salvar">Erro ao salvar informação</string>
    <string name="viagem_excluida_sucesso">Viagem removida com sucesso</string>

    <!-- ViagemVO -->
    <string name="imagem_vo">imagem</string>
    <string name="total_vo">total</string>
    <string name="gasto_total_vo">Gasto Total R$ </string>
    <string name="barra_progresso_vo">barraProgresso</string>
    <string name="data_vo">data</string>
    <string name="destino_vo">destino</string>
    <string name="id_vo">id</string>



    <!-- Categorias -->
    <string name="alimentacao">Alimentação</string>
    <string name="combustivel">Combustível</string>
    <string name="transporte">Transporte</string>
    <string name="hospedagem">Hospedagem</string>
    <string name="outros">Outros</string>
    <string name="gasto_excluida_sucesso">Gasto removido com sucesso</string>
    <string name="viagem_sipn">Viagem</string>
    <string name="viagem_spinner">Viagem</string>
    <string name="falha_ao_autenticar">Falha ao autenticar</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
</resources>
