<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.denis.boaviagem.BoaViagemActivity"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usuario"
            android:inputType="text">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/senha"
            android:inputType="textPassword">
        </EditText>

        <CheckBox
            android:id="@+id/manterConectado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manter_conectado" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="entrarOnClick"
            android:text="@string/entrar"
            android:textAlignment="center"
            android:gravity="center"/>
    
</LinearLayout>
</ScrollView>